# DebtOps

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
debtops/: hooks.py  modules.txt  patches.txt
debtops/config/: desktop.py
debtops/debtops/dashboard_chart/debt_originations/: debt_originations.json
debtops/debtops/doctype/debt/: debt.js  debt.json  debt.py  schedule.py
debtops/debtops/doctype/debt_repayment_schedule/: debt_repayment_schedule.json  debt_repayment_schedule.py
debtops/debtops/number_card/active_debts/: active_debts.json
debtops/debtops/number_card/monthly_debt_payments/: monthly_debt_payments.json
debtops/debtops/number_card/projected_interest_remaining/: projected_interest_remaining.json
debtops/debtops/number_card/total_debt_outstanding/: total_debt_outstanding.json
debtops/debtops/report/debt_portfolio/: debt_portfolio.json  debt_portfolio.py
debtops/debtops/workspace/debtops/: debtops.json
debtops/patches/v0_1/: backfill_debt_base_currency_totals.py  backfill_schedule_currency.py
debtops/public/js/: debt.js
debtops/tests/: test_schedule.py
