[project]
name = "debtops"
authors = [
    { name = "Unitech Consulting" }
]
description = "Debt management, amortization schedules, and ERPNext payment journal entries."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "debtops"
